Fixed scrollbar appearances for activity boxes for Windows

--- a/static/style.css
+++ b/static/style.css
@@ -389,11 +389,11 @@ img {
 }
 
 .position-desc {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .imgbox {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .imgleft {
